# 2fast2lamaa

./: CMakeLists.txt  README.md  package.xml  requierements.txt
cfg/: rviz_config.rviz
doc/: map_cleaning.md  offline_loop_closure.md
external_lib/: CMakeLists.txt  KDTree.h
external_lib/cxxopts/: README.md
external_lib/cxxopts/src/: example.cpp
external_lib/cxxopts/test/: catch.hpp
external_lib/happly/: happly.h
external_lib/ioctree/octree2/: Octree.h
include/: ros_utils.h
include/lice/: cost_functions.h  lidar_odometry.h  lidar_odometry_node.h  map_distance_field.h  math_utils.h  pointcloud_utils.h  ros_utils.h  state.h  submap_bundle_adjustment.h  submap_manager.h  types.h  utils.h
include/preint/: preint.h  simulation.h  types.h
include/preint/Eigen/src/Core/: Ref.h
include/preint/Eigen/src/Core/products/: TriangularMatrixMatrix_BLAS.h  TriangularSolverMatrix_BLAS.h
include/preint/Eigen/src/IterativeLinearSolvers/: ConjugateGradient.h  LeastSquareConjugateGradient.h
include/preint/Eigen/src/SVD/: BDCSVD.h
include/preint/Eigen/src/SparseCore/: SparseMatrix.h  TriangularSolver.h
include/preint/Eigen/unsupported/: MPRealSupport  MatrixFunctions
include/preint/Eigen/unsupported/CXX11/src/Tensor/: TensorDeviceSycl.h
include/preint/Eigen/unsupported/src/Eigenvalues/: ArpackSelfAdjointEigenSolver.h
include/preint/Eigen/unsupported/src/IterativeSolvers/: GMRES.h  MINRES.h
include/preint/Eigen/unsupported/src/LevenbergMarquardt/: LevenbergMarquardt.h
include/preint/Eigen/unsupported/src/Skyline/: SkylineMatrix.h
include/preint/Eigen/unsupported/src/SparseExtra/: DynamicSparseMatrix.h  MarketIO.h
launch/: boreas_localization.launch.py  boreas_localization_old.launch.py  boreas_odometry.launch.py  boreas_odometry_old.launch.py  mid360_odometry.launch.py  os0_odometry.launch.py  os1_localization.launch.py  os1_odometry.launch.py  vbr_odometry.launch.py
scripts/: boreas_to_ros2bags.py  loop_closure.py
src/: 2d_lidar_conversion_node.cpp  gp_map_node.cpp  lidar_odometry_node.cpp  map_cleaning.cpp  offline_loop_closure.cpp
src/lib/: lidar_odometry.cpp  map_distance_field.cpp  state.cpp  submap_bundle_adjustment.cpp
